# Unit_Action_Langchain

./: .gitignore  README.md  franka_scene(1).usd  franka_scene.usd  pyproject.toml
examples/: circle_plan.json  letter_A_plan.json  square_plan.json  triangle_plan.json
franka_llm_drawing_control/: .gitignore  README.md  README_EN.md  pyproject.toml
franka_llm_drawing_control/configs/: controller_gains.yaml  drawing_task.yaml  frames.yaml
franka_llm_drawing_control/examples/: __init__.py  run_mock_control_loop.py  run_offline_plan_sampling.py  sample_plan_circle.json  sample_plan_line_square.json
franka_llm_drawing_control/franka_llm_drawing/: __init__.py
franka_llm_drawing_control/franka_llm_drawing/controllers/: __init__.py  diff_ik.py  hybrid_position_force.py  nullspace.py  pose_error.py
franka_llm_drawing_control/franka_llm_drawing/evaluation/: __init__.py  logger.py  metrics.py  plot_results.py
franka_llm_drawing_control/franka_llm_drawing/frames/: __init__.py  pen_tool_offset.py  transforms.py
franka_llm_drawing_control/franka_llm_drawing/llm_bridge/: __init__.py  plan_loader.py  plan_schema.py  primitive_parser.py
franka_llm_drawing_control/franka_llm_drawing/robot/: __init__.py  interfaces.py  mock_franka_backend.py
franka_llm_drawing_control/franka_llm_drawing/sim/: __init__.py  isaac_backend_stub.py  isaac_scene_notes.md
franka_llm_drawing_control/franka_llm_drawing/trajectory/: __init__.py  drawing_sampler.py  path_primitives.py  time_scaling.py
franka_llm_drawing_control/offline_tests/: test_diff_ik.py  test_drawing_sampler.py  test_hybrid_controller.py  test_metrics.py  test_path_primitives.py  test_time_scaling.py  test_transforms.py
outputs/: live_circle_plan.json
robot_drawing_planner/: __init__.py  action_tools.py  agent_events.py  agent_planner.py  cli.py  config.py  demo_app.py  demo_core.py  geometry.py  llm_client.py  model_catalog.py  plan_state.py  planner.py  plot_cli.py  prompts.py  schemas.py  units.py  validators.py  visualization.py
scripts/: run_demo_app.sh
tests/: test_action_tools.py  (+16 more)
(+6 files in other folders)
