[project]
name = "robot-drawing-planner"
version = "0.1.0"
description = "LangChain planner that converts natural language drawing commands into robot primitive action JSON."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain",
  "langchain-openai",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
robot-drawing-plan = "robot_drawing_planner.cli:main"

[tool.pytest.ini_options]
markers = [
  "live: optional live OpenAI API smoke tests, skipped by default",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
